--- a/horizontal.html
+++ b/horizontal.html
@@ -1,7 +1,7 @@
 <HTML>
     <HEAD>
         <TITLE>
-            horizontal line
+            Horizontal line
         </TITLE>
     </HEAD>
     <BODY STYLE ="BACKGROUND-COLOR: black;">
